--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <button id="count-button">Count is <span id="count"></span></button>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
