added virtual dom from YCMJason video creating your own virtual dom

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <button id="count-button">Count is <span id="count"></span></button>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app"></div>
+<!--    <script type="module" src="/src/main.ts"></script>-->
+    <script type="module" src="src/vdom.ts"></script>
   </body>
 </html>
